# ccedit

./: .clang-format  .gitignore  BufferCtl.cpp  BufferCtl.hpp  CMakeLists.txt  CodeEditorAbstract.hpp  CommonEditorWindow.cpp  CommonEditorWindow.hpp  Controller.cpp  Controller.hpp  EditorListView.cpp  EditorListView.hpp  FileExplorer.cpp  FileExplorer.hpp  FileExplorerMakeFileDir.cpp  FileExplorerMakeFileDir.hpp  FileExplorerTables.cpp  FileExplorerTables.hpp  FileExplorerWidget.cpp  FileExplorerWidget.hpp  FindFile.cpp  FindFile.hpp  FindTables.cpp  FindTables.hpp  FindText.cpp  FindText.hpp  FindTypes.cpp  FindTypes.hpp  OutlineTables.cpp  OutlineTables.hpp  ProjectCtl.cpp  ProjectCtl.hpp  ProjectCtlTables.cpp  ProjectCtlTables.hpp  ProjectCtlWin.cpp  ProjectCtlWin.hpp  ProjectListItem.hpp  ProjectMenu.cpp  ProjectMenu.hpp  ProjectMgr.cpp  (+38 more)
builtin_mods/ccpp/: CodeEditorCCPP.cpp  CodeEditorCCPP.hpp  mod_ccpp.cpp  mod_ccpp.hpp  module_ccpp.cpp  module_ccpp.hpp
builtin_mods/go/: CodeEditorGo.cpp  CodeEditorGo.hpp  mod_go.cpp  mod_go.hpp
builtin_mods/python/: CodeEditorPy.cpp  CodeEditorPy.hpp  mod_py.cpp  mod_py.hpp  mod_python.cpp  mod_python.hpp
builtin_mods/text/: CodeEditorText.cpp  CodeEditorText.hpp  mod_text.cpp  mod_text.hpp
unitest/: CMakeLists.txt  MWin.cpp  MWin.hpp  main.cpp  utils.cpp  utils.hpp
